--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 data/
+
+glove/vocab.txt
+
+glove/vocab_german_unprocessed.txt
+
+german_ted_alt.txt
+
+german_ted_all.txt
+
+glove/german_ted_unprocessed.txt
+
+glove/vocab_german.txt
+
+glove/vocab_german.txt
+
+glove/*.txt
+glove/*.bin
+*.pyc
+glove/text8
